<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/language_search_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:id="@+id/recent_lang_text_view"
                    android:text="@string/recent_language"
                    android:layout_marginStart="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
            />
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recent_lang_recycler_view"
                    android:nestedScrollingEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
            <TextView
                    android:id="@+id/all_lang_text_view"
                    android:text="@string/all_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
            />
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/language_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
            />
        </LinearLayout>
    </ScrollView>
    <androidx.appcompat.widget.SearchView
            android:id="@+id/language_search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/search_language_hint"
            app:iconifiedByDefault="false"
            app:layout_constraintStart_toStartOf="parent"
            app:queryBackground="@null"
            android:background="@drawable/custom_search_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>
    <LinearLayout
            android:id="@+id/linearLayout"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatButton
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:textColor="@color/language_button_text"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/language_button"
                android:id="@+id/source_language"/>
        <androidx.appcompat.widget.AppCompatButton
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/language_button_text"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/language_button"
                android:id="@+id/destination_language"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>