<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent">

    <!--    <com.chibde.visualizer.LineBarVisualizer-->
    <!--            android:id="@+id/audio_visualizer"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="240dp"-->
    <!--            app:layout_constraintBottom_toTopOf="@id/record_bt"-->
    <!--            app:layout_constraintEnd_toEndOf="parent"-->
    <!--            app:layout_constraintStart_toStartOf="parent"/>-->
    <TextView
            android:id="@+id/word_tv"
            android:hint="@string/speak_to_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:fontFamily="@font/public_sans_regular"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/meaning_item"
            app:layout_constraintBottom_toTopOf="@+id/pulsator"
            app:layout_constraintVertical_bias="0.35"/>
    <RelativeLayout
            android:id="@+id/select_language_container"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="55dp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/language_swap_container"
                android:background="@drawable/custom_language_select"
                android:paddingVertical="4dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent">

            <TextView
                    android:id="@+id/source_language"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avus_medium"
                    android:textColor="@color/black"
                    android:textSize="16sp"
            />
        </LinearLayout>
        <FrameLayout
                android:id="@+id/language_swap_container"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <ImageView
                    android:id="@+id/language_swap"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_swap"
                    android:contentDescription="@string/image_des"/>
        </FrameLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/language_swap_container"
                android:background="@drawable/custom_language_select"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent">
            <TextView
                    android:id="@+id/destination_language"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/avus_medium"
                    android:textColor="@color/black"
                    android:textSize="16sp"
            />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/meaning_item"
            android:background="@drawable/meaning_item_background"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/select_language_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0">
        <TextView
                android:id="@+id/meaning_tv"
                android:layout_alignParentTop="true"
                android:hint="@string/translation"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:fontFamily="@font/public_sans_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
        <View
                android:id="@+id/meaning_view_separate"
                android:layout_below="@+id/meaning_tv"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/very_light_gray" tools:ignore="DuplicateIds"/>
        <RelativeLayout
                android:layout_below="@+id/meaning_view_separate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageButton
                    android:id="@+id/meaning_speaker"
                    android:layout_toStartOf="@+id/meaning_cp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_item_button"
                    android:padding="8dp"
                    android:src="@drawable/icon_speaker"
                    android:contentDescription="@string/image_des" android:layout_centerInParent="true"/>
            <ImageButton
                    android:id="@+id/meaning_cp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/custom_item_button"
                    android:padding="8dp"
                    android:src="@drawable/icon_duplicate"
                    android:contentDescription="@string/image_des"/>
        </RelativeLayout>
    </RelativeLayout>
    <pl.bclogic.pulsator4droid.library.PulsatorLayout
            android:id="@+id/pulsator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:pulse_color="@color/light_red"
            app:pulse_count="4"
            app:pulse_duration="1600"
            app:pulse_interpolator="Linear"
            app:pulse_repeat="0"
            android:layout_marginBottom="128dp"
            android:layout_width="160dp"
            android:layout_height="160dp">
        <ImageView
                android:id="@+id/record_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@drawable/custom_oval"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/icon_mc_phone_solid"
                android:contentDescription="@string/image_des"/>
    </pl.bclogic.pulsator4droid.library.PulsatorLayout>
<!--    <ImageView-->
<!--            android:id="@+id/record_bt"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="16dp"-->
<!--            android:background="@drawable/custom_oval"-->
<!--            app:srcCompat="@drawable/icon_mc_phone_solid"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            android:layout_marginBottom="128dp"-->
<!--            android:contentDescription="@string/image_des"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>