<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/translate_fragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
                android:id="@+id/select_language_container"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="55dp">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@+id/language_swap_container"
                    android:background="@drawable/custom_language_select"
                    android:paddingVertical="4dp"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">

                <TextView
                        android:id="@+id/source_language"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avus_medium"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                />
            </LinearLayout>
            <FrameLayout
                    android:id="@+id/language_swap_container"
                    android:layout_centerInParent="true"
                    android:layout_marginHorizontal="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                <ImageView
                        android:id="@+id/language_swap"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:src="@drawable/icon_swap"
                        android:contentDescription="@string/image_des"/>
            </FrameLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/language_swap_container"
                    android:background="@drawable/custom_language_select"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                <TextView
                        android:id="@+id/destination_language"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/avus_medium"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                />
            </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/word_item"
            android:background="@drawable/meaning_item_background"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/select_language_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
        <EditText
                android:id="@+id/word_et"
                android:layout_alignParentTop="true"
                android:textColor="@color/black"
                android:background="@null"
                android:textSize="20sp"
                android:hint="@string/input_word_hint"
                android:paddingBottom="32dp"
                android:fontFamily="@font/public_sans_regular"
                android:maxLines="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="" android:inputType="textMultiLine" tools:ignore="LabelFor"/>
        <View
                android:id="@+id/word_view_separate"
                android:layout_below="@+id/word_et"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/very_light_gray"/>
        <RelativeLayout
                android:layout_below="@+id/word_view_separate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageButton
                    android:id="@+id/word_speaker"
                    android:layout_toStartOf="@+id/word_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_item_button"
                    android:padding="8dp"
                    android:src="@drawable/icon_speaker"
                    android:contentDescription="@string/image_des"/>
            <ImageButton
                    android:id="@+id/word_favorite"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/custom_item_button"
                    android:padding="8dp"
                    android:src="@drawable/icon_star_selector"
                    android:contentDescription="@string/image_des"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
            android:id="@+id/meaning_item"
            android:background="@drawable/meaning_item_background"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="8dp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/word_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

        <TextView
                android:id="@+id/meaning_tv"
                android:layout_alignParentTop="true"
                android:hint="@string/translation"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:maxLines="5"
                android:scrollbars="vertical"
                android:fontFamily="@font/public_sans_regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
        />
        <View
                android:id="@+id/meaning_view_separate"
                android:layout_below="@+id/meaning_tv"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/very_light_gray" tools:ignore="DuplicateIds"/>
        <RelativeLayout
                android:layout_below="@+id/meaning_view_separate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageButton
                    android:id="@+id/meaning_speaker"
                    android:layout_toStartOf="@+id/meaning_cp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_item_button"
                    android:layout_centerInParent="true"
                    android:padding="8dp"
                    android:src="@drawable/icon_speaker"
                    android:contentDescription="@string/image_des"/>
            <ImageButton
                    android:id="@+id/meaning_cp"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/custom_item_button"
                    android:padding="8dp"
                    android:src="@drawable/icon_duplicate"
                    android:contentDescription="@string/image_des"/>
        </RelativeLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>